fix: Align and Justify use correctly
Fixed the align and justify after re-visiting one
of the assignment sites, now need to implement
the lists properly and adjust padding and margins.

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -2,6 +2,8 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .logo {
@@ -10,22 +12,13 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  justify-content: center;
-}
 
-.left-links{
-  justify-content: flex-start;
-  align-content: space-between;
-}
-
-.right-links {
-  justify-content: flex-end;
-  align-content: space-between;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  flex-direction: row;
 }
 
 a {
